--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">WeatherApp</string>
     <string name="appwidget_city">City</string>
     <string name="add_widget">Add widget</string>
+    <string name="label_useGps">Użyj GPS</string>
 </resources>
