--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="appwidget_city">City</string>
     <string name="add_widget">Add widget</string>
     <string name="label_useGps">Użyj GPS</string>
+    <string name="label_long_term_forecast">Pogoda długoterminowa</string>
 </resources>
